feat: endpoint to manage the Graph library (#250)
Closes https://github.ibm.com/st4sd/overview/issues/567
