# docs/openapi.yaml
@@ -1,3 +1,4 @@
+swagger: '2.0'
 basePath: /
 consumes:
 - application/json
@@ -326,6 +327,25 @@ definitions:
       dsl:
         description: The dictionary representing an experiment in DSL format
         type: object
+    type: object
+  library-graph:
+    properties:
+      components:
+        items:
+          description: The DSL 2.0 definition of a component template, there must
+            be at least one.
+          type: object
+        type: array
+      entrypoint:
+        description: The DSL 2.0 definition of the entrypoint - optional if there
+          is exactly 1 workflow template. If set, it must point to a workflow template
+        type: object
+      workflows:
+        items:
+          description: The DSL 2.0 definition of a workflow template, there must be
+            at least one.
+          type: object
+        type: array
     type: object
   mount-volume:
     properties:
@@ -1751,6 +1771,43 @@ paths:
           description: Success
       tags:
       - internal-experiments
+  /library/:
+    get:
+      operationId: get_utility_dsl
+      responses:
+        '200':
+          description: Success
+      summary: Returns the contents of the Graph library - an array of Graphs
+      tags:
+      - library
+    post:
+      operationId: post_utility_dsl
+      parameters:
+      - in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/library-graph'
+      responses:
+        '200':
+          description: Success
+      summary: Validates a DSL graph and adds it to the library
+      tags:
+      - library
+  /library/{name}/:
+    delete:
+      operationId: delete_utility_dsl
+      responses:
+        '200':
+          description: Success
+      summary: Removes 1 Graph from the library
+      tags:
+      - library
+    parameters:
+    - in: path
+      name: name
+      required: true
+      type: string
   /query/experiments/:
     post:
       operationId: post_query_experiments
@@ -2031,3 +2088,5 @@ tags:
   name: datasets
 - description: Utility operations
   name: utilities
+- description: Graph library operations
+  name: library
